--- a/mercury_tours/test-output/emailable-report.html
+++ b/mercury_tours/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">7,321</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">1,082</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Login.BaseTest</td><td><a href="#m0">login</a></td><td rowspan="1">1538386978119</td><td rowspan="1">2287</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.jio.Testcases.ConsumerLoginPageTest</td><td><a href="#m0">ConsumerLoginPortalTest</a></td><td rowspan="1">1538562376652</td><td rowspan="1">290</td></tr><tr class="passedeven"><td><a href="#m1">ConsumerLogoTest</a></td><td rowspan="1">1538562376563</td><td rowspan="1">59</td></tr><tr class="passedeven"><td><a href="#m2">ConsumerPortalTittle</a></td><td rowspan="1">1538562376632</td><td rowspan="1">18</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Login.BaseTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.jio.Testcases.ConsumerLoginPageTest#ConsumerLoginPortalTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.jio.Testcases.ConsumerLoginPageTest#ConsumerLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.jio.Testcases.ConsumerLoginPageTest#ConsumerPortalTittle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
