--- a/mercury_tours/test-output/index.html
+++ b/mercury_tours/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Bestinet002\AppData\Local\Temp\testng-eclipse-89069051\testng-customsuite.xml</span>
+                    <span>C:\Users\Bestinet002\AppData\Local\Temp\testng-eclipse-987190669\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Login.BaseTest" hash-for-method="login">login</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.jio.Testcases.ConsumerLoginPageTest" hash-for-method="ConsumerLoginPortalTest">ConsumerLoginPortalTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.jio.Testcases.ConsumerLoginPageTest" hash-for-method="ConsumerLogoTest">ConsumerLogoTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.jio.Testcases.ConsumerLoginPageTest" hash-for-method="ConsumerPortalTittle">ConsumerPortalTittle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +130,34 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Login.BaseTest</span>
+              <span class="class-name">com.jio.Testcases.ConsumerLoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login">
-                  </a> <!-- login -->
-                  <span class="method-name">login</span>
+                  <a name="ConsumerLoginPortalTest">
+                  </a> <!-- ConsumerLoginPortalTest -->
+                  <span class="method-name">ConsumerLoginPortalTest</span>
+                  <em>
+(Login Validation for Consumer Portal)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ConsumerLogoTest">
+                  </a> <!-- ConsumerLogoTest -->
+                  <span class="method-name">ConsumerLogoTest</span>
+                  <em>
+(Validation of Logo On Consumer Portal Home Page)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ConsumerPortalTittle">
+                  </a> <!-- ConsumerPortalTittle -->
+                  <span class="method-name">ConsumerPortalTittle</span>
+                  <em>
+(Validation of Tittle On Consumer Portal Home Page)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +165,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Bestinet002\AppData\Local\Temp\testng-eclipse-89069051\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Bestinet002\AppData\Local\Temp\testng-eclipse-987190669\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +174,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Login.BaseTest&quot;/&gt;
+      &lt;class name=&quot;com.jio.Testcases.ConsumerLoginPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +214,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'login')
-data.setCell(0, 2, 'Login.BaseTest')
-data.setCell(0, 3, 2287);
+data.setCell(0, 1, 'ConsumerLoginPortalTest')
+data.setCell(0, 2, 'com.jio.Testcases.ConsumerLoginPageTest')
+data.setCell(0, 3, 290);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'ConsumerLogoTest')
+data.setCell(1, 2, 'com.jio.Testcases.ConsumerLoginPageTest')
+data.setCell(1, 3, 59);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'ConsumerPortalTittle')
+data.setCell(2, 2, 'com.jio.Testcases.ConsumerLoginPageTest')
+data.setCell(2, 3, 18);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 367 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,19 +257,47 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Login.BaseTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">openBrowser</span>
+              <div class="chronological-class-name">com.jio.Testcases.ConsumerLoginPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">ReportSetup</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-suite before -->
+              <div class="configuration-suite before">
+                <span class="method-name">setup</span>
+                <span class="method-start">318 ms</span>
+              </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">login</span>
-                <span class="method-start">4369 ms</span>
+                <span class="method-name">ConsumerLogoTest</span>
+                <span class="method-start">7346 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">getResult([TestResult name=ConsumerLogoTest status=SUCCESS method=ConsumerLoginPageTest.ConsumerLogoTest()[pri...)</span>
+                <span class="method-start">7406 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">ConsumerPortalTittle</span>
+                <span class="method-start">7415 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">getResult([TestResult name=ConsumerPortalTittle status=SUCCESS method=ConsumerLoginPageTest.ConsumerPortalTitt...)</span>
+                <span class="method-start">7434 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">ConsumerLoginPortalTest</span>
+                <span class="method-start">7435 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">getResult([TestResult name=ConsumerLoginPortalTest status=SUCCESS method=ConsumerLoginPageTest.ConsumerLoginPo...)</span>
+                <span class="method-start">7726 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-test after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">6658 ms</span>
+                <span class="method-name">Exit</span>
+                <span class="method-start">7726 ms</span>
               </div> <!-- configuration-test after -->
+              <div class="configuration-suite after">
+                <span class="method-name">endReport</span>
+                <span class="method-start">8472 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
