--- a/mercury_tours/test-output/old/Default suite/methods.html
+++ b/mercury_tours/test-output/old/Default suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>18/10/01 15:12:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Configuration.openBrowser()[pri:0, instance:Login.BaseTest@204f30ec]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>18/10/01 15:12:58</td>   <td>4364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.login()[pri:0, instance:Login.BaseTest@204f30ec]">login</td> 
-  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/01 15:13:00</td>   <td>6654</td> <td>&nbsp;</td><td title="&lt;&lt;Configuration.closeBrowser()[pri:0, instance:Login.BaseTest@204f30ec]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:09</td>   <td>0</td> <td title="&gt;&gt;ConsumerBaseClass.ReportSetup()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&gt;&gt;ReportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/10/03 15:56:09</td>   <td>309</td> <td title="&gt;&gt;ConsumerLoginPageTest.setup()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/10/03 15:56:16</td>   <td>7337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerLogoTest()[pri:1, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">ConsumerLogoTest</td> 
+  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>7399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/10/03 15:56:16</td>   <td>7406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerPortalTittle()[pri:2, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">ConsumerPortalTittle</td> 
+  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>7425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/10/03 15:56:16</td>   <td>7425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerLoginPortalTest()[pri:3, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">ConsumerLoginPortalTest</td> 
+  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>7717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>7718</td> <td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.Exit()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;Exit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:17</td>   <td>8463</td> <td title="&lt;&lt;ConsumerBaseClass.endReport()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
 </table>
