--- a/mercury_tours/test-output/emailable-report.html
+++ b/mercury_tours/test-output/emailable-report.html
@@ -8,13 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">1,082</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">6,323</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.jio.Testcases.ConsumerLoginPageTest</td><td><a href="#m0">ConsumerLoginPortalTest</a></td><td rowspan="1">1538562376652</td><td rowspan="1">290</td></tr><tr class="passedeven"><td><a href="#m1">ConsumerLogoTest</a></td><td rowspan="1">1538562376563</td><td rowspan="1">59</td></tr><tr class="passedeven"><td><a href="#m2">ConsumerPortalTittle</a></td><td rowspan="1">1538562376632</td><td rowspan="1">18</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.jio.Testcases.ConsumerLoginPageTest</td><td><a href="#m0">ConsumerLoginPortalTest</a></td><td rowspan="1">1538734227962</td><td rowspan="1">282</td></tr><tr class="passedeven"><td><a href="#m1">ConsumerLogoTest</a></td><td rowspan="1">1538734227879</td><td rowspan="1">52</td></tr><tr class="passedeven"><td><a href="#m2">ConsumerPortalTittle</a></td><td rowspan="1">1538734227943</td><td rowspan="1">17</td></tr><tr class="passedodd"><td rowspan="5">com.jio.Testcases.DashBoardTest</td><td><a href="#m3">AccountBalanceTextValidation</a></td><td rowspan="1">1538734233343</td><td rowspan="1">43</td></tr><tr class="passedodd"><td><a href="#m4">DashBoardPageTittleValidation</a></td><td rowspan="1">1538734228245</td><td rowspan="1">5032</td></tr><tr class="passedodd"><td><a href="#m5">Last5TranscationTextValidation</a></td><td rowspan="1">1538734233388</td><td rowspan="1">39</td></tr><tr class="passedodd"><td><a href="#m6">MoveToTranscationHistoryPage</a></td><td rowspan="1">1538734233429</td><td rowspan="1">80</td></tr><tr class="passedodd"><td><a href="#m7">SecondDashBoardPageTittleValidation</a></td><td rowspan="1">1538734233280</td><td rowspan="1">62</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.jio.Testcases.ConsumerLoginPageTest#ConsumerLoginPortalTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.jio.Testcases.ConsumerLoginPageTest#ConsumerLoginPortalTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.jio.Testcases.ConsumerLoginPageTest#ConsumerLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.jio.Testcases.ConsumerLoginPageTest#ConsumerPortalTittle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.jio.Testcases.DashBoardTest#AccountBalanceTextValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.jio.Testcases.DashBoardTest#DashBoardPageTittleValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.jio.Testcases.DashBoardTest#Last5TranscationTextValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.jio.Testcases.DashBoardTest#MoveToTranscationHistoryPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.jio.Testcases.DashBoardTest#SecondDashBoardPageTittleValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
