--- a/mercury_tours/test-output/old/Default suite/methods-alphabetical.html
+++ b/mercury_tours/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62aa67">  <td>18/10/03 15:56:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerLoginPortalTest()[pri:3, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">ConsumerLoginPortalTest</td> 
-  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/10/03 15:56:16</td>   <td>-88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerLogoTest()[pri:1, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">ConsumerLogoTest</td> 
-  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/10/03 15:56:16</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerPortalTittle()[pri:2, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">ConsumerPortalTittle</td> 
-  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>293</td> <td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.Exit()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;Exit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:09</td>   <td>-7425</td> <td title="&gt;&gt;ConsumerBaseClass.ReportSetup()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&gt;&gt;ReportSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:17</td>   <td>1038</td> <td title="&lt;&lt;ConsumerBaseClass.endReport()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>-26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="f5e5e3">  <td>18/10/03 15:56:16</td>   <td>292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/10/03 15:56:09</td>   <td>-7116</td> <td title="&gt;&gt;ConsumerLoginPageTest.setup()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5bc79255]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1213216872</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>18/10/05 15:39:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLoginPageTest.ConsumerLogoTest()[pri:1, instance:com.jio.Testcases.ConsumerLoginPageTest@5ae63ade]">ConsumerLogoTest</td> 
+  <td>main@1511785794</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>18/10/05 15:39:06</td>   <td>-17</td> <td>&nbsp;</td><td title="&gt;&gt;DashBoardTest.DashBoardIntialize()[pri:0, instance:com.jio.Testcases.DashBoardTest@610694f1]">&gt;&gt;DashBoardIntialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1511785794</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/05 15:39:06</td>   <td>60</td> <td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.Exit()[pri:0, instance:com.jio.Testcases.DashBoardTest@610694f1]">&lt;&lt;Exit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1511785794</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/05 15:38:59</td>   <td>-7112</td> <td title="&gt;&gt;ConsumerBaseClass.ReportSetup()[pri:0, instance:com.jio.Testcases.DashBoardTest@610694f1]">&gt;&gt;ReportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1511785794</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/05 15:39:07</td>   <td>760</td> <td title="&lt;&lt;ConsumerBaseClass.endReport()[pri:0, instance:com.jio.Testcases.DashBoardTest@610694f1]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1511785794</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/05 15:39:06</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerBaseClass.getResult(org.testng.ITestResult)[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5ae63ade]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1511785794</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>18/10/05 15:38:59</td>   <td>-6980</td> <td title="&gt;&gt;ConsumerLoginPageTest.setup()[pri:0, instance:com.jio.Testcases.ConsumerLoginPageTest@5ae63ade]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1511785794</td>   <td></td> </tr>
 </table>
